menu close outside click

--- a/style.css
+++ b/style.css
@@ -23,3 +23,13 @@
     @apply max-w-[75rem] mx-auto w-[90%];
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: white;
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: transparent 0 0 20px 20px #23232329;
+}
